[gd_scene load_steps=6 format=3 uid="uid://dc1gfn1ju0trv"]

[ext_resource type="Script" path="res://Scripts/interactive_screen_controller.gd" id="1_gcxvd"]
[ext_resource type="PackedScene" uid="uid://htqrbvq1nhnm" path="res://Scenes/Minigames/timing_minigame_test.tscn" id="2_gusu8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pt2g6"]
resource_local_to_scene = true
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_g6cqb"]
material = SubResource("StandardMaterial3D_pt2g6")

[sub_resource type="BoxShape3D" id="BoxShape3D_6dqh1"]
size = Vector3(1, 1, 0.01)

[node name="TestMinigamePanel" type="Node3D"]
script = ExtResource("1_gcxvd")

[node name="Display" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_g6cqb")

[node name="Area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area"]
shape = SubResource("BoxShape3D_6dqh1")

[node name="Viewport" type="SubViewport" parent="."]
size = Vector2i(960, 640)

[node name="TimingMinigameTest" parent="Viewport" instance=ExtResource("2_gusu8")]

[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
